Fix small padding issues and make the footer less visible

--- a/al_ui/static/css/default.css
+++ b/al_ui/static/css/default.css
@@ -25,8 +25,8 @@ a:hover {
 }
 
 #push, #footer{
-	height: 48px;
-	margin-top: -48px;
+	height: 50px;
+	margin-top: -50px;
 }
 
 #wrap > #main {
@@ -116,6 +116,20 @@ section.container{
 .anchor-offset{
 	padding-top: 75px;
 	margin-top: -50px;
+}
+
+.powered-by img{
+    vertical-align: bottom;
+}
+
+.powered-by:hover {
+    -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%);
+}
+
+.powered-by {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
 }
 
 .huge-icon {
